<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.mszhapa.blume.MainActivity">


        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:scaleType="centerInside"
            android:src="@drawable/blume" />

        <TextView
            android:id="@+id/spacing1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/picture"
            android:background="#FFFFFF"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/fascinated"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spacing1"
            android:background="#000000"
            android:padding="11dp"
            android:text="@string/description"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />


        <ImageView
            android:id="@+id/cocktail"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:scaleType="fitXY"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/description"
            android:src="@drawable/cocktail" />

        <TextView
            android:id="@+id/description2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cocktail"
            android:background="#000000"
            android:padding="11dp"
            android:text="@string/description2"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description2"
            android:background="@android:color/black"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/map"
                android:layout_toStartOf="@+id/map"
                android:background="#000000"
                android:padding="25dp"
                android:text="@string/location"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/location"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="26dp"
                android:scaleType="fitStart"
                android:src="@drawable/mapfile" />

            <TextView
                android:id="@+id/hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/contact"
                android:layout_marginBottom="20dp"
                android:layout_toLeftOf="@+id/map"
                android:layout_toStartOf="@+id/map"
                android:background="#000000"
                android:padding="25dp"
                android:text="@string/hours"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <ImageView

                android:id="@+id/clock"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignLeft="@+id/location"
                android:layout_alignStart="@+id/location"
                android:layout_alignTop="@+id/hours"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="26dp"
                android:src="@drawable/clock" />


            <ImageView

                android:id="@+id/map"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitStart"
                android:src="@drawable/map"

                />

        </RelativeLayout>

        <TextView
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"

            android:background="#FFFFFF"
            android:onClick="bookTable"
            android:padding="15dp"
            android:text="@string/link"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>
</ScrollView>
